fix: remove horizontal overflow from appearance tab in settings

--- a/src/components/settings/Appearance/Appearance.css
+++ b/src/components/settings/Appearance/Appearance.css
@@ -4,7 +4,8 @@
   padding: 12px;
   background-color: var(--theme-bg-with-opacity);
   max-height: calc(100% - 60px);
-  overflow: auto;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .appearance__theme-selection-container {
